<resources>
    <string name="app_name">Layouts</string>
    <string name="FrameLayout">Frame Layout</string>
    <string name="GridLayout">Grid Layout</string>
    <string name="RelativeLayout">Relative Layout</string>
    <string name="ConstraintLayout">Constraint Layout</string>
    <string name="HelloWorld">Hello World</string>
    <string name="HiWorld">Hi World</string>
    <string name="HeyWorld">Hey World</string>
</resources>
