<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FrameLayout" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GridLayout" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RelativeLayout" />

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConstraintLayout" />
</LinearLayout>